# MMGH

./: .env.ionic  .gitignore  CHANGELOG.md  README.md  fix_block.ps1  index.html  package-lock.json  package.json  sample.ps1  vite.config.js
docs/: API_KEY_HANDLING.md  RELEASE.md  SMOKE_TEST_TEMPLATE.md
public/: index.html
release/0.1.0/: README.md  RELEASE_NOTES.md  SHA256SUMS.txt  SMOKE_TEST.md
src/: App.js  App.jsx  App.test.jsx  index.js  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/sql/: schema.sql
src-tauri/src/: agent.rs  cmd.rs  db.rs  desktop.rs  ionic_server.rs  main.rs
src-tauri/windows/nsis/: SimpChinese.nsh  installer-hooks.nsh
src-tauri/windows/wix/: zh-CN.wxl
src/CSS/: App.css  Danmu.css  DateTimeModel.css  RoseSvg.css  agent-knowledge-responsive.css  base-layer.css  experience-layer.css  foundation.css  gallery-polish.css  gallery.css  knowledge.css  layout-responsive.css  lunbotu.css  menu.css  mini-player.css  music-deck.css  music-polish.css  music-refinements.css  music-responsive.css  music-room-theme.css  music-showcase-theme.css  music-showcase-tuning.css  music.css  organizer-refinements.css  polish-layer.css  polish.css  refinement-layer.css  reminders.css  responsive-context-layer.css  responsive-core-layer.css  runtime-polish.css  runtime.css  settings-polish.css  settings-refinements.css  settings.css  shared-workspace.css  shell-refinements.css  shell-refresh.css  skill-responsive.css  skills.css  (+10 more)
src/Menu-model/: Album.js  Album.jsx  AudioVisualizer.js  AudioVisualizer.jsx  DanmuNotes.jsx  DateTimeModel.js  DateTimeModel.jsx  Menu.jsx  NavigationItem.js  NavigationItem.jsx  ParticleEffectMenu.js  lunbotu.js  lunbotu.jsx  music.js  music.jsx  takePhoto.js  takePhoto.jsx  time.js  time.jsx
src/components/: GalleryWorkspace.jsx  KnowledgeVault.jsx  MiniPlayerBar.jsx  MusicWorkspace.jsx  ReminderCompletionDialog.jsx  ReminderWorkspace.jsx  RuntimeWorkspace.jsx  SettingsWorkspace.jsx  SettingsWorkspace.test.jsx  SkillWorkspace.jsx  TodayWorkspace.jsx  WeatherWorkspace.jsx  weatherData.js
src/homePage-model/: Danmu.jsx  ParticleEffect.js  ParticleEffect.jsx  RoseSvg.js  RoseSvg.jsx
src/i18n/: index.jsx  index.test.jsx
src/security/: provider.js  provider.test.js
src/storage/: agent.js  agent.test.js  notes.js  tauri.js
src/utils/: playbackSnapshot.js  todayInsights.js  todayInsights.test.js  (+1 more)
(+2 files in other folders)
