[package]
name = "mygh"
version = "0.1.0"
description = "MMGH Agent Desktop"
authors = [ "Codex" ]
license = ""
repository = ""
default-run = "mygh"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11" }
anyhow = "1.0"
once_cell = "1.19"
rusqlite = { version = "0.30", features = [ "bundled" ] }
reqwest = { version = "0.12", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
keyring = "1.2"

[patch.crates-io]
ntapi = { path = "vendor/ntapi-0.3.7" }
nfd = { path = "vendor/nfd-0.0.4" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "mygh"
path = "src/main.rs"
