[package]
name = "mygh"
version = "0.1.0"
description = "MMGH Agent Desktop"
authors = [ "Codex" ]
license = ""
repository = ""
default-run = "mygh"
edition = "2021"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2", features = [] }
anyhow = "1.0"
once_cell = "1.19"
rusqlite = { version = "0.30", features = [ "bundled" ] }
reqwest = { version = "0.12", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
keyring = "1.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "mygh"
path = "src/main.rs"
